# Intelligent_Robotics

./: .gitignore  README.md  coordinates.csv  gmapping.sh  go.sh  important.md  nav.py  qr_and_voice.py  save_map.sh  voice.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/path_node/lib/path_node/: path_node
install/path_node/share/path_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/qr_track_alvar/lib/qr_track_alvar/: qr_track_alvar
log/: latest_build
points/: qr_code_points.csv  wirefram_points.csv
qr_code_voice_node/: package.xml  setup.cfg  setup.py
src/: intial.md
src/cmd_vel_publisher/: package.xml  setup.cfg  setup.py
src/cmd_vel_publisher/cmd_vel_publisher/: cmd_vel_publisher.py
src/nav_goal/: package.xml  setup.cfg  setup.py
src/nav_goal/nav_goal/: multi_point_nav.py  single_point_nav.py
src/path_node/: package.xml  setup.cfg  setup.py
src/path_node/path_node/: path_node.py
src/pattern_trajectory/: README.md  package.xml  setup.cfg  setup.py
src/pattern_trajectory/launch/: experiment4.launch.py
src/pattern_trajectory/pattern_trajectory/: pattern_trajectory.py
src/qr_code_voice_node/: package.xml  setup.py
src/qr_code_voice_node/launch/: qr_code_voice.launch.py
src/qr_code_voice_node/qr_code_voice_node/: qr_code_voice_node.py
src/qr_track_alvar/: README.md  package.xml  setup.cfg  setup.py
src/qr_track_alvar/config/: coordinates.csv
src/qr_track_alvar/launch/: qr_voice_patrol.launch.py
src/qr_track_alvar/qr_track_alvar/: decodeimg.py  patrol_mission.py  qr_track_alvar.py
src/turtlebot4_navigation/config/: nav2.yaml
src/turtlebot4_navigation/launch/: nav2.launch.py
src/turtlebot4_navigation/maps/: map.pgm  map.yaml  test.yaml
(+18 files in other folders)
